<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:background="@android:drawable/list_selector_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="5dp"
    android:weightSum="1.0" >

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/code" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"
        android:minWidth="90dp"
        android:maxWidth="120dp"
        android:text="@string/name" />




    <TextView
        android:id="@+id/tvMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/total" />
    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/total" />



</TableRow>