<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="7dp">





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/apellido"/>

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/correo"/>

            <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/contrasena"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </LinearLayout>

    <TableRow
            android:id="@+id/footer"
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:padding="0dp"
            android:weightSum="1">

        <Button
                android:id="@+id/cancel"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:layout_weight="0.5"
                android:padding="7dp"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>

        <Button
                android:id="@+id/save"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_green"
                android:padding="7dp"
                android:text="@string/register"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>
    </TableRow>

</RelativeLayout>