<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:elevation="3dp"
        android:padding="7dp"
        android:background="@color/blue">

        <EditText
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/search"
            android:layout_gravity="center"
            android:gravity="left|center_vertical"
            android:background="@drawable/edt_white_curve"
            android:textColor="@color/dark_blue"
            android:padding="5dp"/>

        <com.beardedhen.androidbootstrap.FontAwesomeText
            android:id="@+id/icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            fontawesometext:fa_icon="fa-search"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </TableRow>
    <TableRow
        android:id="@+id/buttons"
        style="android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:padding="0dp"
        android:weightSum="1">

        <Button
            android:id="@+id/info"
            style="android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange"
            android:layout_weight="0.2"
            android:padding="7dp"
            android:text="@string/pedido"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/detalle"
            style="android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_darkgray"
            android:layout_weight="0.33"
            android:padding="7dp"
            android:text="@string/detallepedido"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/cancel"
            style="android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="@drawable/btn_red"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/send"
            style="android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:background="@drawable/btn_green"
            android:padding="7dp"
            android:text="@string/enviar"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/white"/>
    </TableRow>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:divider="@color/white"
        android:dividerHeight="5dp"
        android:padding="7dp"/>

</LinearLayout>