<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:minWidth="300dp">

    <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            android:background="@color/status_success"
            android:elevation="3dp"
            style="android:attr/buttonBarStyle">

        <TextView
                android:id="@+id/product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
    </LinearLayout>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="left"
                android:text="@string/cantidad"
                android:textColor="@color/dark_blue"
                android:textAppearance="@android:style/TextAppearance.Small"/>

        <EditText
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:layout_weight="0.6"
                android:gravity="right"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="left"
                android:text="@string/precio"
                android:textColor="@color/dark_blue"
                android:textAppearance="@android:style/TextAppearance.Small"/>

        <EditText
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:gravity="right"/>
    </TableRow>






    <TableRow
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:padding="0dp"
            android:weightSum="1">

        <Button
                android:id="@+id/cancel"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>

        <Button
                android:id="@+id/save"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_green"
                android:padding="5dp"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>
    </TableRow>

</LinearLayout>