<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Datos del Usuario-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="7dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:text="@string/options_info_day"
            android:textAppearance="@android:style/TextAppearance.Medium" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/cliente"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/day"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/imei"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/phoneImei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/start_period"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/startPeriod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/close_period"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/closePeriod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/not_defined"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>
    </LinearLayout>

    <!--Grilla de Items del menu-->
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="76dp"
        android:gravity="center"
        android:horizontalSpacing="7dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:layout_centerHorizontal="true"
        android:verticalSpacing="7dp"
        android:listSelector="@drawable/menu_item"
        android:padding="10dp"
        android:layout_alignParentBottom="true">
    </GridView>

</RelativeLayout>
