<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >



        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#777" >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:background="#777"
                        android:padding="5dip"
                        android:weightSum="1.0" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.20"
                            android:gravity="center_vertical|center_horizontal"
                            android:minWidth="48dp"
                            android:text="@string/cantidad"
                            android:textColor="#FFF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.30"
                            android:gravity="center_vertical|center_horizontal"
                            android:minWidth="128dp"
                            android:text="@string/descripcion"
                            android:textColor="#FFF" />





                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical|center_horizontal"
                            android:minWidth="64dp"
                            android:text="@string/precio"
                            android:textColor="#FFF" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical|center_horizontal"
                            android:minWidth="64dp"
                            android:text="@string/subtotal"
                            android:textColor="#FFF" />



                    </TableRow>
                </TableLayout>

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true" >

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </TableLayout>
                </ScrollView>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#777"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.2"
                android:text="Total:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.2"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
        </TableRow>


    </TableLayout>
</RelativeLayout>
